--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "mocha": "^9.0.3"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "net": "^1.0.2",
     "nodemon": "^2.0.12",
     "redux": "^4.1.1"
